# multifrontal-DAG

./: .gitignore  CMakeLists.txt  README.md  camphor2.cmake  example.f90  mic_knl.cmake  sky-cluster.cmake
scripts/: codecov.sh  init_test.sh  parallel_test.sh  test.sh
src/: analyse_phase_m.f90
src/main/: analyse_phase_m.f90  block_index_m.f90  block_local_index_creator_m.f90  block_local_index_info_m.f90  block_local_index_m.f90  block_size_calculator_m.f90  border_kernel_m.f90  border_subroutines_m.f90  coefficient_setter_m.f90  column_count_m.f90  compute_tree_m.f90  cost_calculator_m.f90  extend_add_kernel_m.f90  extend_add_subroutines_m.f90  extractor_types_m.f90  factorize_kernel_m.f90  factorize_subroutines_m.f90  factors_pos_calculator_m.f90  factors_size_estimator_m.f90  finding_leaves_m.f90  fundamental_supernode_m.f90  hppllt.f90  hppllt_data_m.f90  integer_function_m.f90  matrix_splitter_m.f90  node_data_m.f90  options_m.f90  ordering_m.f90  partial_sum_m.f90  relax_supernode_m.f90  relaxed_supernode_m.f90  reordering_m.f90  seq_backward_m.f90  seq_factorize_m.f90  seq_forward_m.f90  sort_m.f90  supernode_m.f90  symbolic_factorize_m.f90  time_list_m.f90  time_manager_m.f90  (+3 more)
src/main/algorithms/: column_count_m.f90  compute_tree_m.f90  create_local_index_m.f90  create_supernodal_index_m.f90  finding_leaves_m.f90  generate_local_index_m.f90  relax_supernode_m.f90  symbolic_factorize_m.f90  tree_pruning_m.f90
src/main/block_matrices/: block_matrices_m.f90  block_size_calculator_m.f90  border_controller_m.f90  factors_m.f90  node_data_m.f90  supernode_controller_m.f90  work_controller_m.f90
src/main/data_structure_creators/: fundamental_supernode_m.f90  perm_m.f90  relaxed_supernode_m.f90  reordering_m.f90  sort_m.f90  tree_m.f90
src/main/data_structures/: ccs_m.f90  contiguous_set_m.f90  contiguous_sets_long_m.f90  contiguous_sets_m.f90  disjoint_set_m.f90  doubly_linked_list_m.f90  doubly_linked_lists_m.f90  heap_m.f90  iterator_m.f90  jagged_array_3D_m.f90  jagged_array_DP_m.f90  jagged_array_cptr_m.f90  jagged_array_m.f90  stack_m.f90
src/main/factors/: block_matrices_m.f90  border_controller_m.f90  border_matrix_extractor_m.f90  factors_m.f90  matrix_controller_m.f90  matrix_extractor_m.f90  supernode_controller_m.f90  supernode_matrix_extractor_m.f90  work_controller_m.f90  work_matrix_extractor_m.f90
src/main/kernel/: array_rearrange_kernel_m.f90  array_splitter_m.f90  border_solve_kernel_m.f90  factorize_kernel_m.f90  matrix_splitter_m.f90  set_zero_kernel_m.f90  sparse_add_kernel_m.f90
src/main/right_hand/: array_extractor_m.f90  block_arrays_m.f90  border_array_extractor_m.f90  rh_border_controller_m.f90  rh_controller_m.f90  rh_supernode_controller_m.f90  rh_work_controller_m.f90  right_hand_m.f90  supernode_array_extractor_m.f90  work_array_extractor_m.f90
src/main/seq_factorize/: seq_factorize_m.f90
src/main/seq_solve/: seq_backward_m.f90  seq_forward_m.f90
src/main/starpu/: starpu_wrapper_m.f90  task_m.f90
src/main/starpu_factorize/: register_block_local_index_m.f90  register_factors_m.f90  starpu_factorize_m.f90
src/main/starpu_factors/: block_matrix_ptrs_m.f90  starpu_border_matrix_extractor_m.f90  starpu_factors_m.f90  starpu_matrix_extractor_m.f90  starpu_supernode_matrix_extractor_m.f90  starpu_work_matrix_extractor_m.f90
src/main/storage_converter/: ccs_to_crs_m.f90  sym_to_asym_m.f90
src/test/: block_index_test.f90  block_local_index_creator_test.f90  block_local_index_test.f90  block_size_calculator_test.f90  border_kernel_test.f90  coefficient_setter_test.f90  column_count_test.f90  compute_tree_test.f90  cost_calculator_test.f90  extend_add_subroutines_test.f90  extend_add_test.f90  extend_test.f90  factorize_kernel_test.f90  factorize_subroutines_test.f90  factors_pos_calculator_test.f90  factors_size_estimator_test.f90  finding_leaves_test.f90  fundamental_supernode_test.f90  hppllt_test.f90  integer_function_test.f90  matrix_splitter_test.f90  node_data_test.f90  partial_sum_test.f90  perm_test.f90  relax_supernode_test.f90  relaxed_supernode_test.f90  reordering_test.f90  seq_backward_test.f90  seq_factorize_test.f90  seq_forward_test.f90  solve_kernel_test.f90  starpu_test.f90  supernode_test.f90  symbolic_factorize_test.f90  tree_test.f90
src/test_mod/: action_m.f90  check_matrix_ptr_m.f90  controller_test_routines_m.f90  extend_m.f90  extract_matrix_m.f90  perm_maker_m.f90  sparse_matrix_maker_m.f90  tree_maker_m.f90
src/test_util/: array_node_m.f90  array_tests_m.f90  assert_equal_array_m.f90  assert_equal_m.f90  linked_list_m.f90  log_m.f90  node_m.f90  scalar_tests_m.f90  test_util.f90  tests_m.f90  to_str_m.f90
test_matrix/: poisson_9_9.mtx
(+136 files in other folders)
